# ProgCG

./: .gitignore  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  imgui.ini  main copy.cpp  main.cpp  makefile
.cmake/api/v1/reply/: cache-v2-83e5ef40309f3912c51e.json  cmakeFiles-v1-a135f32e9d2a383d2194.json  codemodel-v2-5899499e7dadb47dd435.json  index-2024-11-19T10-51-53-0064.json  target-Continuous-Debug-a0fb6d8a2b3fd59b4c96.json  target-ContinuousBuild-Debug-e3808d25185f390e7815.json  target-ContinuousConfigure-Debug-69de8c0b0aa5925dd9a0.json  target-ContinuousCoverage-Debug-a3e6dbc98e649e94d7b6.json  target-ContinuousMemCheck-Debug-5dbb386d4bc5719c2472.json  target-ContinuousStart-Debug-500f5da97e3911bfe852.json  target-ContinuousSubmit-Debug-4fbcd630b26bce5a3ce1.json  target-ContinuousTest-Debug-9661d4faad5343f417bd.json  target-ContinuousUpdate-Debug-5ef29be12f7d19b489c6.json  target-Experimental-Debug-24805066154f61f9f728.json  target-ExperimentalBuild-Debug-fc9ab4fb144d07bee89a.json  target-ExperimentalConfigure-Debug-b986b875b223b180bf70.json  target-ExperimentalCoverage-Debug-f38d2df22c38ddb4bc23.json  target-ExperimentalMemCheck-Debug-ee231ae72a38d80b95d1.json  target-ExperimentalStart-Debug-b66118387c73b439c3b1.json  target-ExperimentalSubmit-Debug-caf5e8a67f20b2e4a069.json  target-ExperimentalTest-Debug-8f6074b7e9475b1b69c5.json  target-ExperimentalUpdate-Debug-647a798dd4d14c42f61b.json  target-Nightly-Debug-f6de9c19278e2897a484.json  target-NightlyBuild-Debug-135c9459ce37eabf3afc.json  target-NightlyConfigure-Debug-65c06c72a311fb67f8a6.json  target-NightlyCoverage-Debug-acd1e19104e9fee32abc.json  target-NightlyMemCheck-Debug-696e04f971f9561c71b6.json  target-NightlyMemoryCheck-Debug-b47ca7d8fc4b31bf3447.json  target-NightlyStart-Debug-8aee4eed94568c707ed3.json  target-NightlySubmit-Debug-6ca12eeb46770524d27d.json  target-NightlyTest-Debug-7d7161568f8af0c8fe3f.json  target-NightlyUpdate-Debug-6a86946c0a04c3c83792.json  target-ProgCG-Debug-cfa3f97748ecb44e00d0.json
3dparty/nanosvg/: CMakeLists.txt
PD/: basic.vert  pdbasic.frag  pdmain.cpp  pdpoint_light.h
Testing/: TAG
Testing/20241119-0147/: Test.xml
assets/models/: lamp.gltf  scene.glb
common/: aabb.h  box3.h  frame_buffer_object.h  gltf_loader.h  intersection.h  matrix_stack.h  path.h  point_light.h  projector.h  renderable.h  shaders.h  simple_shapes.h  texture.h  trackball.h  utilities.h  view_manipulator.h
common/carousel/: carousel.h  carousel_loader.h  carousel_to_renderable.h
includes/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Carosello.cpp  Carosello.h  Color.cpp  Color.h  FrameBuffer.cpp  FrameBuffer.h  Input.cpp  Input.h  Intersection.cpp  Intersection.h  Ligth.cpp  Ligth.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Orbit.cpp  Orbit.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  SceneData.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Track.cpp  Track.h  Trackball.cpp  Trackball.h  path.h
includes/materials/: LitMaterial.cpp  LitMaterial.h  Material.cpp  Material.h  TerrainMaterial.cpp  TerrainMaterial.h  UnlitMaterial.cpp  UnlitMaterial.h
models/: shapes.glb  skydome.glb  testPlane.glb
shaders/: basic.frag  basic.vert  depth.frag  depth.vert  depth_lamp.frag  depth_lamp.geom  depth_lamp.vert  depthmap.frag  depthmap.vert  terrain.frag  unlit.frag  unlit.vert
